fixed navigation bar z-index issue

--- a/src/components/education/education.css
+++ b/src/components/education/education.css
@@ -58,7 +58,6 @@
 }
 
 .content {
-    z-index: 5;
     position: relative;
     margin-top: 3rem;
 }
