--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,7 +2,6 @@ nav {
     background: rgba(0, 0, 0, 0.3);
     width: max-content;
     padding: 0.7rem 0.8rem;
-    z-index: 2;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
